--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             text-shadow: 2px 2px 3px gray;
         }
     </style>
-</head>
+</head><link rel="stylesheet" href="style.css">
 <body>
     <h1>Привет, фронтенд!</h1>
     <p>Я учусь кодить на смартфоне 📱</p>
