--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Мой первый сайт!</title>
+    <title>Мой первый сайт!</title><!-- Стандартные фавиконы -->
+<link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
+<link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16">
+
+<!-- Для Apple устройств -->
+<link rel="apple-touch-icon" href="favicon-32x32.png">
+
+<!-- Резервный вариант -->
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         body { 
             background: #f0f0f0; 
