--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>Мой первый сайт</title>
     <!-- Стандартные фавиконы -->
-    <link rel="icon" href="favicon-32x32.png" type="image/png" sizes="32x32">
-    <link rel="icon" href="favicon-16x16.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     
     <!-- Для Apple устройств -->
     <link rel="apple-touch-icon" href="favicon-32x32.png">
