--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             text-align: center;
             font-family: Arial;
         }
-        h1 {  /* Исправлено hi → h1 */
+        h1 {  /* Заголовок первого уровня */
             color: blue;
             text-shadow: 2px 2px 3px gray;
         }
     </style>
 </head>
 <body>
-    <h1>Привет, фронтенд!</h1>  <!-- Исправлено hi → h1 -->
-    <p>Я учусь кодить на смартфоне 📱</p>  <!-- Добавлен смайл и закрывающий тег -->
+    <h1>Привет, фронтенд!</h1>
+    <p>Я учусь кодить на смартфоне 📱</p>
 </body>
-</html>  <!-- Закрывающие теги -->
+</html>
